--- a/payments.yaml
+++ b/payments.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.1
 info:
   title: Payments API for Mazinger
-  description: Payments Sock Shop API
+  description: Payments Sock Shop API Test
   version: '1.0'
 servers:
   - url: http://payment.sock-shop
