--- a/payments.yaml
+++ b/payments.yaml
@@ -2,6 +2,7 @@ openapi: 3.0.1
 info:
   title: Payments API for Mazinger
   description: Payments Sock Shop API
+  description: test
   version: '1.0'
 servers:
   - url: http://payment.sock-shop
